[package]
name = "JeysHashSet"
version = "0.1.0"
edition = "2024"
authors = ["Alexandre Fromantin <alexandre.fromantin08@gmail.com@gmail.com>"]
license = "MPL-2.0"

[dependencies]
crc32fast = "1.5.0"
criterion = "0.8.2"
either = "1.15.0"
memmap2 = "0.9.10"
rand = "0.10.0"
tokio = { version = "1.51.0", features = ["full"] }
tracing = "0.1.44"
zerocopy = { version = "0.8.48", features = ["derive"] }

[dependencies.xxhash-rust]
version = "0.8.15"
features = ["xxh3"]

[[bench]]
name = "xxhash"
harness = false
