[package]
name = "jeys_hash_set"
version = "0.1.0"
edition = "2024"
authors = ["Alexandre Fromantin <alexandre.fromantin08@gmail.com@gmail.com>"]
license = "MPL-2.0"
repository = "https://github.com/Alexandre-Fromantin/JeysHashSet"

[dependencies]
aligned-vec = "0.6.4"
crc32fast = "1.5.0"
libm = "0.2.16"
memmap2 = "0.9.10"
tokio = { version = "1.51.0", features = ["full"] }
tracing = "0.1.44"
zerocopy = { version = "0.8.48", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Storage_FileSystem"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.2", features = ["fs"] }

[dependencies.xxhash-rust]
version = "0.8.15"
features = ["xxh3"]

[dev-dependencies]
criterion = "0.8.2"
rand = "0.10.0"

[[bench]]
name = "xxhash"
harness = false
